<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>eu.exeris</groupId>
    <artifactId>exeris-kernel-root</artifactId>
    <version>0.7.0</version>
    <packaging>pom</packaging>

    <name>Exeris Kernel :: Root</name>
    <description>Cloud-Native, Zero-Copy Runtime Platform (Java 26+, FFM, Open-Core)</description>
    <inceptionYear>2026</inceptionYear>

    <modules>
        <module>exeris-kernel-build-config</module>
        <module>exeris-kernel-bom</module>
        <module>exeris-kernel-parent</module>

        <module>exeris-kernel-spi</module>
        <module>exeris-kernel-tck</module>
        <module>exeris-kernel-core</module>
        <module>exeris-kernel-community-testkit</module>
        <module>exeris-kernel-community</module>
        <module>exeris-kernel-community-kafka</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>26</maven.compiler.source>
        <maven.compiler.target>26</maven.compiler.target>
        <maven.compiler.release>26</maven.compiler.release>

        <jdk.preview.enable>--enable-preview</jdk.preview.enable>
        <coverage.argLine/>
        <jvm.args>
            -XX:+UnlockExperimentalVMOptions
            -XX:+UseZGC
            -XX:-ZUncommit
            --enable-preview
            --enable-native-access=ALL-UNNAMED
            -XX:FlightRecorderOptions=stackdepth=256
            -XX:StartFlightRecording=disk=true,filename=target/surefire.jfr,maxsize=256m,maxage=10m,settings=profile
        </jvm.args>
        <maven.build.timestamp.format>yyyyMMdd-HHmmss</maven.build.timestamp.format>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.1</version>
                    <configuration>
                        <release>${maven.compiler.release}</release>
                        <compilerArgs>
                            <arg>${jdk.preview.enable}</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                    <configuration>
                        <argLine>@{coverage.argLine} ${jvm.args}</argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>coverage</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <version>0.8.14</version>
                        <executions>
                            <execution>
                                <id>prepare-jacoco-agent</id>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                                <configuration>
                                    <propertyName>coverage.argLine</propertyName>
                                </configuration>
                            </execution>
                            <execution>
                                <id>jacoco-report</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>report</goal>
                                </goals>
                                <configuration>
                                    <formats>
                                        <format>XML</format>
                                        <format>HTML</format>
                                    </formats>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <distributionManagement>
        <repository>
            <id>github-exeris-kernel</id>
            <name>Exeris Kernel — GitHub Packages</name>
            <url>https://maven.pkg.github.com/exeris-systems/exeris-kernel</url>
        </repository>
        <snapshotRepository>
            <id>github-exeris-kernel</id>
            <name>Exeris Kernel — GitHub Packages (Snapshots)</name>
            <url>https://maven.pkg.github.com/exeris-systems/exeris-kernel</url>
        </snapshotRepository>
    </distributionManagement>
</project>
